test/files_test/errors/wrong_type_arg_plus.scm
; Test: Wrong type argument to + - should return exit code 84
(+ #t 2)
